cmake_minimum_required(VERSION 3.27)
project(Week-2)

set(CMAKE_CXX_STANDARD 17)

add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(c c.cpp)
add_executable(d d.cpp)
add_executable(e e.cpp)
add_executable(f f.cpp)
add_executable(g g.cpp)
add_executable(h h.cpp)
add_executable(i i.cpp)
add_executable(j j.cpp)
add_executable(k k.cpp)